--- a/AgendaDeContactos/appsettings.json
+++ b/AgendaDeContactos/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+   "AgendaAPIDBConnectionString": "Data Source=ConsultaAlumnos.db"
+  }
 }
