--- a/AgendaDeContactos/AgendaDeContactos.csproj
+++ b/AgendaDeContactos/AgendaDeContactos.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <Folder Include="Data\Implementations\Interfaces\" />
-    <Folder Include="Entities\" />
+    <Folder Include="Data\Entities\" />
   </ItemGroup>
 
 </Project>
